fix double scroll on full-width pages

--- a/sass/shop/_cart.scss
+++ b/sass/shop/_cart.scss
@@ -2,6 +2,9 @@
  * Cart
  */
 body.woocommerce-cart {
+	.site-content {
+		overflow-x: hidden;
+	}
 	&.two-cols-cart {
 		form.woocommerce-cart-form {
 			width: 60%;
