--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -252,7 +252,6 @@ article.post .entry-content {
 
 .site-content {
 	padding-top: 50px;
-	overflow-x: hidden;
 }
 
 .page-links {
